[B] Fix drawer list items not truncating
Fixes #2052

--- a/client/src/theme/Components/backend/_vertical-list.scss
+++ b/client/src/theme/Components/backend/_vertical-list.scss
@@ -185,6 +185,7 @@
     .content {
       display: flex;
       flex-grow: 1;
+      min-width: 0;
     }
 
     .figure-wrapper,
@@ -247,7 +248,7 @@
       flex-flow: column;
       flex-grow: 1;
       width: 100%;
-      padding-right: 20px;
+      min-width: 0;
       vertical-align: top;
     }
 
